# git-assume

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
src/git_assume/: logger_config.yml  main.py  utils.py
